<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9DACAC"
    tools:context=".ProfileTab_Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:src="@drawable/bike_drawing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edtProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#352F2D"
        android:ems="10"
        android:hint="@string/profile_name"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        android:id="@+id/edtProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#352F2D"
        android:ems="10"
        android:hint="@string/your_profession"
        android:inputType="textLongMessage"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtHobbies2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#352F2D"

        android:ems="10"
        android:hint="@string/bikes_you_own"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtSports2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#352F2D"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/bikes_you_are_seeking"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/all_fields_are_requiredtext"
        android:textColorHint="#313435"
        app:layout_constraintBottom_toTopOf="@+id/btnInfo"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profile_named"
        android:textColor="#311B92"
        app:layout_constraintBottom_toTopOf="@+id/edtProfile2"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Profession"
        android:textColor="#311B92"
        app:layout_constraintBottom_toTopOf="@+id/edtProfession"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="148dp"
        android:layout_height="18dp"
        android:layout_marginBottom="17dp"
        android:text="@string/bikes_you_own"
        android:textColor="#311B92"
        app:layout_constraintBottom_toTopOf="@+id/edtHobbies2"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bikes_you_want_to_have"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toTopOf="@+id/edtSports2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtBio2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#352F2D"
        android:ems="10"
        android:hint="@string/Your_bio"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/bio"
        android:textColor="#311B92"
        app:layout_constraintBottom_toTopOf="@+id/edtBio2"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:background="#0097A7"
        android:padding="15dp"
        android:text="@string/press_here_to_submit_edited_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="37dp" />

</androidx.constraintlayout.widget.ConstraintLayout>