<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersTab">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="145dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/logo"
        android:src="@drawable/bike_drawing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/usersFrameStats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="264dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="54dp"
            android:gravity="center"
            android:text="@string/scroll_for_more_users"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="392dp"
            android:layout_height="78dp"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:foregroundGravity="top"
            android:text="@string/click_on_a_user_name_for_photos"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hold_a_user_name_for_details"
            android:textAlignment="center"
            android:textColor="#A1887F"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="366dp"
            android:layout_height="364dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="1dp">

        </ListView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>