<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8D94A3"
    tools:context=".ClassicBikeShareLogin">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="163dp"
        android:layout_height="144dp"
        android:contentDescription="@string/instagram_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bike_drawing" />

    <EditText
        android:id="@+id/newUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/enter_your_login_email"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete|textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newUserPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/enter_your_password"

        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:background="#03A9F4"
        android:text="@string/submit_login"
        android:textColor="#090909"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserPass" />

    <Button
        android:id="@+id/btnSwitchToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="#333B3E"
        android:text="@string/switch_to_signup"
        android:textColor="#FFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or_goto"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

</androidx.constraintlayout.widget.ConstraintLayout>