<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharePictureTab_Fragment">

    <ImageView
        android:id="@+id/imgPlace"
        android:layout_width="340dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bike_drawing"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edtImageDescrip"
        android:layout_width="311dp"
        android:layout_height="100dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/to_share_your_image_first_add_a_description_here_then_click_on_the_image_above"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPlace" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/post_your_image"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtImageDescrip" />

    <ProgressBar
        android:id="@+id/picPostProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />

    <Button
        android:id="@+id/btnViewYourAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btn_View_your_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picPostProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>